--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -10,16 +10,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 20.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 20.x
 
     - name: Build
       working-directory: ./typescript
@@ -34,12 +30,12 @@ jobs:
 
     steps:
       - name: Unit test
-        working-directory: ./typescript
+        working-directory: typescript
         run: |
           npm run test
 
       - name: Striker
-        working-directory: ./typescript
+        working-directory: typescript
         run: |
           striker run
         
