--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -23,7 +23,8 @@ jobs:
     - name: Build
       working-directory: ${{env.working-directory}}
       run: |
-        npm install        
+        npm install
+        npm install -g stryker-cli
 
     - name: Unit test
       working-directory: ${{env.working-directory}}
