--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -14,6 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/upload-artifact@v3
+      with:
+        name: mutation-report
+        path: reports/mutation/mutation.html
 
     - name: Use Node.js 20.x
       uses: actions/setup-node@v3
